--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="audi-section">
             <div class="audi-heading">
                 <div class="audi-img">
-                    <img src="/images/audiA3.png" alt="AudiA32016">
+                    <img src="images/audiA3.png" alt="AudiA32016">
                 </div>
                 <div class="audi-text">
                     <h2>
